2013-08-15  Keith Seitz  <keiths@redhat.com>

	* generic/gdbtk-cmds.c (gdb_search): Update for symbol
	searching API update in gdb.
	
2013-07-30  Keith Seitz  <keiths@redhat.com>

	* generic/gdbtk-cmds.c (gdb_clear_file): Remove use of pop_target,
	which was recently removed from gdb.

2013-07-23  Keith Seitz  <keiths@redhat.com>

	* generic/gdbtk.c (close_bfds): Update declaration.

2013-07-15  Roland Schwingel  <roland.schwingel@onevision.com>

	* generic/gdbtk-register.c (get_register): Update
	to reflect changes from upstream gdb. Prettyprinting
	becomes prettyformatting now.
	* generic/gdbtk-wrapper.c (GDB_val_print,wrap_val_print):
	Likewise.
	* generic/gdbtk-wrapper.h (GDB_val_print): Likewise.

2013-07-02  Keith Seitz  <keiths@redhat.com>

	* generic/gdbtk-cmds.c (gdb_listfuncs): Update declaration.
	* generic/gdbtk-hooks.c (gdb_two_elem_cmd): Likewise.
	(report_error): Likewise.
	(gdbtk_readline_end, gdbtk_post_add_symbol, gdbtk_error_begin,
	gdbtk_attach): Likewise.
	* generic/gdbtk/gdbtk-register.c (setup_architecture_data):
	Likewise.
	* generic/gdbtk-wrapper.c (GDB_equal_value, GDB_reinit_frame_cache,
	GDB_value-coerce_array): Likewise.
	* generic/gdbtk.c (gdbtk_interactive, gdbtk_start_timer,
	gdbtk_stop_timer, _initialize_gdbtk): Likewise.

2013-06-05  Keith Seitz  <keiths@redhat.com>

	* generic/gdbtk-stack.c (get_frame_name): Change type of 'funname'
	to char * to follow recent API updates in gdb.
	Free 'funname' after appending it to the list.
	Remove check for NULL funname in a branch where it could only
	ever be NULL.

2013-06-05  Keith Seitz  <keiths@redhat.com>

	* generic/gdbtk-register.c (map_arg_registers): Change type of
	raw_buffer to gdb_byte to follow recent API changes in gdb.
	* generic/gdbtk-cmds.c (gdb_update_mem): Likewise for ' mbfu',
	'mptr', and 'cptr'.

2013-06-05  Keith Seitz  <keiths@redhat.com>

	* generic/gdbtk.c (tk_command): Use xfree instead of free.
	* generic/gdbtk-hooks.c (gdbtk_call_command): Remove unused
	cleanup.